correct name; gap probably useful

--- a/resources/css/bem/play-detail.less
+++ b/resources/css/bem/play-detail.less
@@ -141,7 +141,6 @@
   &__mods {
     display: flex;
     margin-top: 10px;
-    padding-right: 0;
     flex-wrap: wrap;
 
     @media @desktop {
@@ -154,9 +153,10 @@
     }
   }
 
-  &__mods_pp {
+  &__mods-pp {
     display: flex;
     justify-content: space-between;
+    gap: 5px;
 
     @media @desktop {
       display: contents;
